--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="hrt cen"></div>
         <div class="hrt rig"></div>
         <div class="content">
-        <h2>宝贝，我们已经在一起</h2>
+<!--         <h2>宝贝，我们已经在一起</h2> -->
         <div class="timer">
             <b id="d"></b> 天 <b id="h"></b> 小时 <b id="m"></b> 分 <b id="s"></b> 秒
         </div>
