--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             // 创建一个新的红心元素
             const heart = document.createElement("div");
             heart.classList.add("heart");
-            heart.innerHTML = "❤️";
+            heart.innerHTML = "❤️😘❤️";
 
             // 随机化红心的大小
             const size = Math.random() * 20 + 20;  // 红心大小在 20px 到 40px 之间
